<resources>
    <string name="app_name">Lucid Kanban</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete all</string>
    <string name="tasks_title">Welcome to Lucid Tasks!</string>
    <string name="main_welcome_title">Welcome to Lucid Kanban!</string>
    <string name="main_subtitle">Check your Lucid Tasks</string>
    <string name="tasks_subtitle">List of tasks available</string>
    <string name="title">Title</string>
    <string name="add_task">Add a Task</string>
    <string name="short_description">Short Description</string>
    <string name="add_task_to_kanban">Add task to Kanban Board</string>
    <string name="task_status">Status:</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="welcome_title_tasks">Welcome to Lucid Tasks!</string>
    <string name="welcome_title_low">Check your Low Priority Tasks!</string>
    <string name="welcome_title_medium">Check your Low Medium Tasks!</string>
    <string name="welcome_title_high">Check your Low High Tasks!</string>
    <string name="welcome_title_board">Welcome to Lucid Kanban Board!</string>
    <string name="welcome_title_todo">Check your To-Do Tasks!</string>
    <string name="welcome_title_inprogress">Check your In Progress Tasks!</string>
    <string name="welcome_title_completed">Check your Completed Tasks!</string>
</resources>
