<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/add_task"/>
    <ImageView
        android:id="@+id/close_task_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/task_close"
        android:layout_alignParentEnd="true"/>

    <RelativeLayout
        android:id="@+id/image_and_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">
        <ImageView
            android:id="@+id/task_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/add_photo"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"/>
        <EditText
            android:id="@+id/task_title_view"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/title"
            android:layout_toEndOf="@id/task_photo"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/task_description_view"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/short_description"
        android:layout_below="@id/image_and_title"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_to_kanban"
        android:layout_below="@id/task_description_view"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@id/checkbox"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="Save"
        />
</RelativeLayout>
