<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/close_task_view"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginLeft="4dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:src="@drawable/task_close"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp">

                <TextView
                    android:id="@+id/edit_task_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:text="EDIT" />

                <ImageView
                    android:id="@+id/save_task_view"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/save_task"/>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/image_and_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/toolbar">
            <ImageView
                android:id="@+id/task_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/add_photo"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/task_title_view"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="4dp"
                android:layout_centerVertical="true"
                android:hint="@string/title"
                android:background="@drawable/rounded_rectangle"
                android:layout_toEndOf="@id/task_photo"/>
         </RelativeLayout>

        <EditText
            android:id="@+id/task_description_view"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:minHeight="100dp"
            android:hint="@string/short_description"
            android:gravity="top"
            android:background="@drawable/rounded_rectangle"
            android:layout_below="@id/image_and_title"/>

        <RelativeLayout
            android:id="@+id/status_and_date_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/task_description_view">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/task_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_status"
                    android:textColor="@color/jetBlack"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_alignEnd="@id/task_status_dropdown"/>

                <Spinner
                    android:id="@+id/task_status_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>




            </LinearLayout>



            <!--<TextView
                android:id="@+id/task_Date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:editable="false"
                android:hint="Date"
                android:gravity="right"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="5dp"/>-->
            <ImageView
                android:id="@+id/task_date_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/date_task"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rounded_rectangle"/>

        </RelativeLayout>


        </RelativeLayout>

</ScrollView>
